# PyTorch-CUDA

./: .gitignore  CMakeLists.txt  README.md  build.sh  pyproject.toml  setup.py
.specstory/history/: 2025-06-12_19-30-creating-a-baseline-for-pytorch-reimplementation.md  2025-06-13_01-04-generate-a-name-for-the-chat.md  2025-06-13_01-37-what-are-these-files-supposed-to-be.md  2025-06-13_01-39-untitled.md
docs/: implementation_details.md  technical_documentation.md
examples/: cpu_test.py  neural_network.py  simple_example.py
include/: cuda_kernels.cuh  cuda_utils.cuh  nn.h  tensor.h
src/: cuda_kernels.cu  tensor.cpp
src/python/: bindings.cpp
